# pytorch-lattice

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements.txt  sitemap.xml
.github/ISSUE_TEMPLATES/: bug_report.md
.github/workflows/: docs.yml  lint.yml  release.yml  ruff.yml  test.yml  tests.yml
api/classifier/: index.html
api/constrained_module/: index.html
api/datasets/: index.html
api/enums/: index.html
api/feature_config/: index.html
api/layers/: index.html
api/model_configs/: index.html
api/models/: index.html
api/plots/: index.html
api/utils/: index.html
concepts/calibrators/: index.html
concepts/classifier/: index.html
concepts/model_types/: index.html
concepts/plotting/: index.html
concepts/shape_constraints/: index.html
contributing/: index.html
docs/: README.md  contributing.md  help.md  index.md  page2.md  why.md
docs/api/: classifier.md  constrained_module.md  datasets.md  enums.md  feature_config.md  layers.md  model_configs.md  models.md  plots.md  utils.md
docs/concepts/: calibrators.md  classifier.md  model_types.md  plotting.md  shape_constraints.md
docs/walkthroughs/: uci_adult_income.md
examples/: basic_classifier.py  calibrated_linear_classification.py  classifier_plotting.py  classifier_with_monotonicity.py
help/: index.html
pytorch_lattice/: __init__.py  classifier.py  configs.py  constrained_module.py  datasets.py  enums.py  feature_config.py  model_configs.py  plots.py
pytorch_lattice/layers/: __init__.py  categorical_calibrator.py  lattice.py  linear.py  numerical_calibrator.py  rtl.py
pytorch_lattice/models/: __init__.py  calibrated_lattice.py  calibrated_linear.py  features.py  model_utils.py
pytorch_lattice/utils/: data.py  models.py
search/: search_index.json
tests/: dummy_test.py  test_classifier.py  test_feature_config.py  test_model_configs.py  test_utils.py  utils.py
tests/layers/: test_categorical_calibrator.py  test_lattice.py  test_linear.py  test_numerical_calibrator.py  test_rtl.py
tests/models/: test_calibrated_lattice.py  test_calibrated_linear.py  test_features.py  test_model_utils.py
tests/utils/: test_data.py  test_models.py
walkthroughs/uci_adult_income/: index.html
why/: index.html
