[tool.poetry]
name = "pytorch-lattice"
version = "0.0.0"
description = "A PyTorch Implementation Of Lattice Modeling Techniques"
license = "MIT"
authors = ["William Bakst <will@sotai.ai>"]
readme = "README.md"
packages = [{include = "pytorch_lattice"}]
repository = "https://github.com/ControlAI/pytorch-lattice"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.7.1"
numpy = "^1.23.5"
pandas = "^1.5.3"
pydantic = "^2.0.2"
torch = "^2.0.0"
tqdm = "^4.65.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
mkdocs = "^1.4.3"
mkdocs-material = "^9.1.18"
mkdocstrings = "^0.22.0"
mkdocstrings-python = "^1.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
