[tool.poetry]
name = "pytorch-lattice"
version = "0.1.0"
description = "A PyTorch Implementation Of Lattice Modeling Techniques"
license = "MIT"
authors = ["William Bakst <will@sotai.ai>"]
readme = "docs/README.md"
packages = [{ include = "pytorch_lattice" }]
repository = "https://github.com/ControlAI/pytorch-lattice"

[tool.poetry.dependencies]
python = ">=3.9, <=3.12"
matplotlib = "^3.7.1"
numpy = "^1.23.5"
pandas = "^2.0.2"
pydantic = "^2.0.2"
torch = ">=2.0.0, !=2.0.1, !=2.1.0"
tqdm = "^4.65.0"

[tool.poetry.group.dev.dependencies]
mkdocs = "^1.4.3"
mkdocs-material = "^9.1.18"
mkdocstrings = "^0.22.0"
mkdocstrings-python = "^1.1.2"
mypy = "^1.6.1"
pytest = "^7.4.0"
ruff = "^0.1.5"
pandas-stubs = "^2.1.1.230928"
types-tqdm = "^4.66.0.4"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
line-length = 88
target-version = "py38"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
exclude = ["examples"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
